KB-11580-prod migration issue fix